<resources>
    <string name="app_name">CarDashboardCore</string>
    <string name="appmenu_module_up_title">Back</string>
    <string name="appmenu_module_add_title">Add</string>
    <string name="module_home_title">Home</string>
    <string name="module_maps_title">Google Maps</string>
    <string name="module_maps_error">Google Maps required to run selected module. Please, install Google Maps first.</string>
    <string name="module_others_clock_title">Clock (h:m)</string>
    <string name="module_others_clock_units">HH:MM</string>
    <string name="module_others_dummy_temperature_title">Bedroom</string>
    <string name="module_others_dummy_temperature_units">°F</string>
    <string name="module_others_gpsspeed_title">Speed (GPS)</string>
    <string name="module_others_battery_title">Battery</string>
    <string name="module_others_battery_units">%</string>
    <string name="module_others_gpsspeed_units">m/s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_add">Add</string>
    <string name="module_others_compass_title">Compass</string>
    <string name="module_others_compass_units" />
    <string name="module_others_folder_new">New folder</string>
    <string name="common_move">Move</string>
    <string name="common_delete">Delete</string>
    <string name="common_more">More</string>
    <string name="preferences">Preferences</string>
    <string name="title_pref_bluetooth">Bluetooth</string>
    <string name="title_pref_logging">Logging</string>
    <string name="pref_bluetooth_title">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">TODO</string>
    <string name="pref_bluetooth_summaryOff">TODO</string>
    <string name="pref_bluetooth_list_devices_title">Bluetooth devices</string>
    <string name="pref_bluetooth_list_devices_summary">Bluetooth devices summary</string>
    <string name="title_pref_obd">OBD II Settings</string>
    <string name="pref_obd_protocols_title">OBD Protocols</string>
    <string name="pref_obd_protocols_summary">TODO</string>
    <string name="pref_imperial_units_title">Use imperial units</string>
    <string name="pref_imperial_units_summaryOff">off todo</string>
    <string name="pref_imperial_units_summaryOn">on todo</string>
    <string name="error_module_shortcut">Unable to send intent:</string>
    <string name="module_shortcuts_new">New shortcut</string>
    <string name="error_internal">Internal application error</string>
    <string name="module_obd_rpm_title">RPM</string>
    <string name="module_obd_rpm_units">rpm</string>
    <string name="module_obd_speed_title">Speed (OBD)</string>
    <string name="module_obd_speed_units">km/h</string>
    <string name="module_obd_title">OBD</string>
    <string name="module_others_title">Other</string>
    <string name="module_settings_title">Settings</string>
    <string name="module_shortcuts_title">Shortcuts</string>
    <string name="module_others_clock_seconds_title">Clock (h:m:s)</string>
    <string name="module_others_clock_seconds_units">HH:MM:SS</string>
    <string name="dialog_more">More</string>
    <string name="dialog_less">Less</string>
    <string name="common_ok">OK</string>
    <string name="module_shortcuts_custom">New custom intent shortcut</string>
    <string name="module_shortcuts_new_maps_google">New Google Maps shortcut</string>
    <string name="gmaps_type_navigate">Navigate</string>
    <string name="gmaps_type_search">Search</string>
    <string name="gmaps_type_place">Display</string>
    <string name="gmaps_place_nearby">Nearby</string>
    <string name="gmaps_place_address">Address</string>
    <string name="gmaps_place_geolocation">Geolocation</string>
    <string name="gmaps_query_custom">Custom</string>
    <string name="gmaps_query_restaurant">Restaurant</string>
    <string name="gmaps_query_gas_station">Gas station</string>
    <string name="gmaps_place">Where</string>
    <string name="gmaps_place_geolocation_latitude">Latitude</string>
    <string name="gmaps_place_geolocation_longitude">Longitude</string>
    <string name="gmaps_place_address_houseNumber">House number</string>
    <string name="gmaps_place_address_street">Street</string>
    <string name="gmaps_place_address_city">City</string>
    <string name="gmaps_place_address_zipCode">ZIP code</string>
    <string name="gmaps_query">Query</string>
    <string name="gmaps_query_text">Query text</string>
    <string name="gmaps_title">Title</string>
    <string name="shortcut_custom_title">Title</string>
    <string name="shortcut_custom_intent">Intent</string>
    <string name="validation_title_not_empty">Title cannot be empty</string>
    <string name="validation_field_not_empty">Cannot be empty</string>
    <string name="validation_field_decimal">Must be a decimal number</string>
    <string name="validation_at_least_one_not_empty">At least one of these fields must be filled</string>
    <string name="common_rename">Rename</string>
    <string name="module_settings_theme_title">Theme</string>
    <string name="module_unit_empty"/>
    <string name="module_sensor_temperature_title">Temperature</string>
    <string name="module_sensor_temperature_units">°C</string>
    <string name="module_http_default">HttpModule</string>
    <string name="module_http_light_button">Light bulb</string>
    <string name="title_application_list">Application list</string>
    <string name="title_custom_intent">Custom intent</string>
    <string name="title_custom_gmaps">Custom gmaps intent</string>
    <string name="pref_logging_title">Enable logging</string>
    <string name="pref_logging_summaryOff">TODO off</string>
    <string name="pref_logging_summaryOn">TODO on</string>
</resources>
