<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/preferences">

    <PreferenceCategory android:title="@string/title_pref_bluetooth">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="@string/pref_bluetooth_title"
            android:key="enable_bluetooth_preference"
            android:summaryOff="@string/pref_bluetooth_summaryOff"
            android:summaryOn="@string/pref_bluetooth_summaryOn"
            android:title="@string/pref_bluetooth_title" />
        <ListPreference
            android:dialogTitle="@string/pref_bluetooth_list_devices_title"
            android:key="bluetooth_list_preference"
            android:summary="@string/pref_bluetooth_list_devices_summary"
            android:title="@string/pref_bluetooth_list_devices_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_pref_logging">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="@string/pref_logging_title"
            android:key="enable_bluetooth_preference"
            android:summaryOff="@string/pref_logging_summaryOff"
            android:summaryOn="@string/pref_logging_summaryOn"
            android:title="@string/pref_logging_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_pref_obd">
        <!-- <ListPreference
            android:defaultValue="AUTO"
            android:dialogTitle="@string/pref_obd_protocols_title"
            android:key="obd_protocols_preference"
            android:summary="@string/pref_obd_protocols_summary"
            android:title="@string/pref_obd_protocols_title" /> -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="@string/pref_imperial_units_title"
            android:key="imperial_units_preference"
            android:summaryOff="@string/pref_imperial_units_summaryOff"
            android:summaryOn="@string/pref_imperial_units_summaryOn"
            android:title="@string/pref_imperial_units_title" />
        <!-- <EditTextPreference
            android:defaultValue=".85"
            android:dialogTitle="@string/pref_volumetric_efficiency_dialog_title"
            android:key="volumetric_efficiency_preference"
            android:summary="@string/pref_volumetric_efficiency_summary"
            android:title="@string/pref_volumetric_efficiency_title" />
        <EditTextPreference
            android:defaultValue="1.6"
            android:dialogTitle="@string/pref_engine_displacement_title"
            android:key="engine_displacement_preference"
            android:summary="@string/pref_engine_displacement_summary"
            android:title="@string/pref_engine_displacement_title" />
        <EditTextPreference
            android:defaultValue="atsp0\natz"
            android:dialogTitle="@string/pref_reader_config_title"
            android:key="reader_config_preference"
            android:summary="@string/pref_reader_config_summary"
            android:title="@string/pref_reader_config_title" /> -->
    </PreferenceCategory>



</PreferenceScreen>