<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--<Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/applist_toolbar"></Toolbar>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dialog_bar_bottom"
        android:layout_margin="@dimen/dialog_text_area_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gmaps_title"
                style="@style/form_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_shortcut_title"
                style="@style/form_text" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_gmaps_spinner_type" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gmaps_place"
                style="@style/form_label" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_gmaps_spinner_place" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/dialog_gmaps_container_geolocation">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmaps_place_geolocation_latitude"
                    style="@style/form_label"
                    android:id="@+id/dialog_gmaps_label_latitude" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_gmaps_text_latitude"
                    android:inputType="numberDecimal"
                    style="@style/form_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmaps_place_geolocation_longitude"
                    android:id="@+id/dialog_gmaps_label_longitude"
                    style="@style/form_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_gmaps_text_longitude"
                    android:inputType="numberDecimal"
                    style="@style/form_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/dialog_gmaps_container_address">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmaps_place_address_houseNumber"
                    style="@style/form_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_gmaps_text_houseNumber"
                    style="@style/form_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmaps_place_address_street"
                    style="@style/form_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_gmaps_text_street"
                    style="@style/form_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmaps_place_address_city"
                    style="@style/form_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_gmaps_text_city"
                    style="@style/form_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmaps_place_address_zipCode"
                    style="@style/form_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_gmaps_text_zipcode"
                    style="@style/form_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/dialog_gmaps_container_query">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmaps_query"
                    style="@style/form_label" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_gmaps_spinner_query" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmaps_query_text"
                    android:id="@+id/dialog_gmaps_label_query"
                    style="@style/form_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_gmaps_text_query"
                    style="@style/form_text" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/dialog_bar_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="@dimen/dialog_button_margin_vertical">

        <TextView
            android:id="@+id/dialog_button_cancel"
            style="@style/button_flat"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/common_cancel" />

        <TextView
            android:id="@+id/dialog_button_ok"
            style="@style/button_flat"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/common_ok" />
    </LinearLayout>

</RelativeLayout>