<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--<Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/applist_toolbar"></Toolbar>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dialog_bar_bottom"
        android:layout_margin="@dimen/dialog_text_area_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shortcut_custom_title"
                style="@style/form_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_shortcut_title"
                style="@style/form_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shortcut_custom_intent"
                style="@style/form_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_shortcut_intent"
                style="@style/form_text" />
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/dialog_bar_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="@dimen/dialog_button_margin_vertical">

        <TextView
            android:id="@+id/dialog_button_cancel"
            style="@style/button_flat"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/common_cancel" />

        <TextView
            android:id="@+id/dialog_button_ok"
            style="@style/button_flat"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/common_ok" />
    </LinearLayout>

</RelativeLayout>